WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26536
Fix external-script-URL-location.html and write-external-script-open.html LayoutTests
https://bugs.webkit.org/show_bug.cgi?id=26536
Summary
Fix external-script-URL-location.html and write-external-script-open.html Lay...
Adam Barth
Reported
2009-06-19 03:05:21 PDT
I broke these tests when landing the XSSAuditor. No one seemed to be awake to review the fix. Patch forthcoming.
Attachments
patch
(1.93 KB, patch)
2009-06-19 03:05 PDT
,
Adam Barth
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2009-06-19 03:05:51 PDT
Created
attachment 31539
[details]
patch
Dimitri Glazkov (Google)
Comment 2
2009-06-19 11:07:20 PDT
Comment on
attachment 31539
[details]
patch
> Index: WebCore/ChangeLog > =================================================================== > --- WebCore/ChangeLog (revision 44850) > +++ WebCore/ChangeLog (working copy) > @@ -1,3 +1,16 @@ > +2009-06-19 Adam Barth <
abarth@webkit.org
> > + > + Reviewed by NOBODY (OOPS!). > +
Bug URL? :)
Adam Barth
Comment 3
2009-06-19 11:43:57 PDT
Sending WebCore/ChangeLog Sending WebCore/dom/Document.cpp Sending WebCore/loader/FrameLoader.cpp Transmitting file data ... Committed revision 44861.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug