WebCore/loader/FrameLoader.cpp
@@ -966,9 +966,6 @@ void FrameLoader::begin(const KURL& url, bool dispatch, SecurityOrigin* origin)
 
     document->implicitOpen();
     
-    // Associate the XSSAuditor with the tokenizer.
-    document->tokenizer()->setXSSAuditor(m_frame->script()->xssAuditor());
-
     if (m_frame->view())
         m_frame->view()->setContentsSize(IntSize());
 }
